build/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arbimon-jobs
  namespace: production
spec:
  selector:
    matchLabels:
      app: arbimon-jobs
  template:
    metadata:
      labels:
        app: arbimon-jobs
    spec:
      containers:
      - name: arbimon-jobs
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/arbimon-jobs:latest
        resources:
          requests:
            memory: "0.5Gi"
            cpu: "0.25"
          limits:
            memory: "7.5Gi"
            cpu: "2"
