build/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: arbimon-jobs-ingress
  namespace: production
  labels:
    app: arbimon-jobs
spec:
  rules:
    - host: arbimon-jobs.rfcx.org
      http:
        paths:
          - backend:
              serviceName: arbimon-jobs-service
              servicePort: 80
